--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-/.phpunit.cache
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+/vendor/
+node_modules/
+public/storage
+public/build
+storage/*.key
 .env
-.env.backup
-.env.production
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
+.env.*.bak
+.phpunit.result.cache
+
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
